--- a/src/assets/styles/signup.css
+++ b/src/assets/styles/signup.css
@@ -1,21 +1,31 @@
 
 .signup_content{
     margin: auto;
-    margin-top: 4em;
+    margin-top: 6em;
     background-color: white;
     width: 40%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    padding: 3em;
 }
 
 
 .signup{
-    background-color: bisque;
-    position: absolute;
+
     width: 100%;
     height: 100%;
 }
 
 .field {
     margin-top: 2em;
+}
+
+.select-role{
+    width: 50%;
+    top: -100px;
+    right: 35px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.role{
+    border-style: solid;
+    border-color: black;
 }
