--- a/src/assets/styles/signup.css
+++ b/src/assets/styles/signup.css
@@ -1,15 +1,14 @@
 
 .signup_content{
     margin: auto;
-    margin-top: 6em;
+    margin-top: 2em;
     background-color: white;
-    width: 40%;
+    width: 30%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 
 .signup{
-
     width: 100%;
     height: 100%;
 }
@@ -19,13 +18,9 @@
 }
 
 .select-role{
-    width: 50%;
-    top: -100px;
+    position: relative;
+    left: 60%;
+    width: 40%;
     right: 35px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.role{
-    border-style: solid;
-    border-color: black;
 }
