--- a/src/assets/styles/signup.css
+++ b/src/assets/styles/signup.css
@@ -1,7 +1,8 @@
 
 .signup_content{
     margin: auto;
-    margin-top: 2em;
+    margin-top: 1em;
+    /* margin-bottom: 2em; */
     background-color: white;
     width: 30%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
